# gtime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
assets/: demo.sh  demo.yml
gtime/: __init__.py  __main__.py  cli.py  core.py  data.py
tests/: test_gtime.py  test_worldtime.py
tests/perf/: profile_lookup.py
worldtime/: __init__.py  cli.py  core.py  data.py
